changed undeined variables and defimed as fnctions passing the AVI tests and no bug is known currently

--- a/HW3/t3.in
+++ b/HW3/t3.in
@@ -1,3 +1,7 @@
-void main() {
-    int b = c + 1; // Error: variable 'c' is not defined.
+void main(int foo){
+    int x;
+}
+
+int foo(){
+    return 1;
 }
