--- a/HW3/t1.in
+++ b/HW3/t1.in
@@ -1,20 +1,10 @@
-void main() {
-    int x = (4 + 7) * 12;
-    byte y = 100b;
-    printOk((x > y) and (x < 100));
-    int z;
+void main(){
+    bool result;
+    result = (bool)result;
 }
 
-// test comment
-void printOk(bool isOk) {
-    int i = 0;
-    while (i < 10) {
-        print("i = ");
-        printi(i);
-        i = i + 1;
-    }
-    if (isOk) {
-        int x = 0;
-        print("ok");
-    } else print("not ok");
+void printOK(){
+    int x = 4;
+    byte y = 100b;
+    int z;
 }
